# colmap

pycolmap/: pyproject.toml
scripts/python/: visualize_model.py
src/pycolmap/: logging.h  main.cc
