[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11==2.12.0"]
build-backend = "scikit_build_core.build"

# Fixes OpenMP detection on Linux, see
# https://github.com/colmap/colmap/issues/2679 for details
[tool.scikit-build.cmake]
args=["-DBLAS_LIBRARIES=/usr/lib/x86_64-linux-gnu/blas/libblas.so", "-DLAPACK_LIBRARIES=/usr/lib/x86_64-linux-gnu/lapack/liblapack.so",
      "-DOpenMP_C_FLAGS=-fopenmp", "-DOpenMP_C_LIB_NAMES=gomp",
      "-DOpenMP_gomp_LIBRARY=/usr/lib/gcc/x86_64-linux-gnu/9/libgomp.so",
      "-DOpenMP_CXX_FLAGS=-fopenmp", "-DOpenMP_CXX_LIB_NAMES=gomp"]

[project]
name = "pycolmap"
version = "3.10-dev"
description="COLMAP bindings"
readme = "README.md"
authors = [
  { name = "Mihai Dusmanu", email = "mihai.dusmanu@gmail.com" },
  { name = "Paul-Edouard Sarlin", email = "psarlin@ethz.ch" },
  { name = "Philipp Lindenberger", email = "plindenbe@ethz.ch" },
]
license = {text = "BSD-3-Clause"}
urls = {Repository = "https://github.com/colmap/pycolmap"}
requires-python = ">=3.7"
dependencies = ["numpy"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true


[tool.cibuildwheel]
build = "cp3{8,9,10,11,12}-{macosx,manylinux,win}*"
archs = ["auto64"]
test-command = "python -c \"import pycolmap; print(pycolmap.__version__)\""

[tool.cibuildwheel.environment]
VCPKG_COMMIT_ID = "13bde2ff13192e1b2fdd37bd9b475c7665ae6ae5"

[tool.cibuildwheel.linux]
before-all = "{package}/ci/install-colmap-centos.sh"

[tool.cibuildwheel.macos]
before-all = "{package}/ci/install-colmap-macos.sh"

[tool.cibuildwheel.windows]
before-all = "powershell -File {package}/ci/install-colmap-windows.ps1"
before-build = "pip install delvewheel"
